<resources>
    <string name="app_name">MetronomePlus</string>
    <string name="knob_background">Background Knob</string>
    <string name="knob_rotary">Rotary knob</string>

    <!-- Views Metronome Fragment -->
    <string name="title_time_signature_uppercase">BEAT/NOTE</string>
    <string name="title_bpm_uppercase">BPM</string>
    <string name="bar">/</string>

    <!-- Content descriptions -->
    <string name="content_description_display_screen_of_beats">Display screen of beats</string>
    <string name="content_description_overlay_gradient_for_the_metronome_background">Overlay gradient for the metronome background</string>
    <string name="content_description_gray_striped_background_for_metronome">Gray striped background for metronome</string>
    <string name="content_description_image_of_an_empty_music_folder">Image of an empty music folder.</string>
    <string name="content_description_file_options_menu">File options menu.</string>
    <string name="content_description_metronome_plus_logo_with_an_eighth_note_in_the_middle">Metronome Plus logo with an eighth note in the middle.</string>
    <string name="content_description_drag_drop_option">Image of the drag and drop option</string>

    <!-- Hints -->
    <string name="hint_search_musics_by_name">Search musics by name</string>
    <string name="hint_name">Name</string>

    <!-- Texts -->
    <string name="metronome">Metronome</string>
    <string name="library">Library</string>
    <string name="new_folder">New Folder</string>
    <string name="edit_folder">Edit Folder</string>
    <string name="view_folder">View Folder</string>
    <string name="folder_name">Folder name</string>
    <string name="save">Save</string>

    <!-- Plural texts -->
    <string name="music_count">{0,choice,0#{0} Music|1#{0} Music|1&lt;{0} Musics}</string>

    <!-- Messages -->
    <string name="message_error">Error: %1$s</string>

    <!-- Titles -->
    <string name="title_load_into_metronome">Load into metronome</string>
    <string name="title_edit_folder">Edit folder</string>
    <string name="title_delete_folder">Delete folder</string>

    <!-- Error Message -->
    <string name="error_message_folder_form_songs_adapter_set_callbacks_is_not_initialized">Error: FolderFormSongsAdapter.setCallbacks is not initialized.</string>

</resources>